Farven er ændret til blå

--- a/Jobzterdk/Jobzterdk.csproj
+++ b/Jobzterdk/Jobzterdk.csproj
@@ -164,6 +164,7 @@
     <Content Include="Content\GFX\Job-logo-white.png" />
     <Content Include="Content\GFX\Job-logo.png" />
     <Content Include="Content\GFX\JobzterBG.jpg" />
+    <Content Include="Content\GFX\JZ logo.png" />
     <Content Include="Content\GFX\JZ-logo-white.png" />
     <Content Include="Content\GFX\JZ-logo.png" />
     <Content Include="Content\GFX\logo-preview.png" />
